<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_acrivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ckz.demo1.activity.user.LoginAcrivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            style="@style/top_back_style"
            android:src="@drawable/tool_bar_back"
            android:id="@+id/back_btn"/>
        <TextView
            style="@style/top_title_style"
            android:text="@string/user_login"
            android:textColor="@color/whilte"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <com.example.ckz.demo1.view.ClearEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user_select"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:digits="@string/filter_vcode"
            android:hint="@string/input_user_name"
            android:textColorHint="@drawable/login_hint_color"
            />
        <com.example.ckz.demo1.view.ClearEditText
            android:id="@+id/password"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:drawableLeft="@drawable/password_select"
            android:drawablePadding="10dp"
            android:digits="@string/filter_vcode"
            android:hint="@string/input_password"
            android:textColorHint="@drawable/login_hint_color"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login"
            android:textSize="@dimen/titleSize"
            android:textColor="@color/whilte"

            />
        <Button
            android:id="@+id/register_btn"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/most_btn_bg"
            android:text="@string/register"
            android:textSize="@dimen/titleSize"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</RelativeLayout>
