<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ckz.demo1.activity.user.RegisterActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/colorPrimary">
    <ImageView
        style="@style/top_back_style"
        android:src="@drawable/tool_bar_back"
        android:id="@id/back_btn"/>
    <TextView
       style="@style/top_title_style"
        android:textColor="@color/whilte"
        android:text="@string/user_register"/>
</RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="50dp"
    android:orientation="vertical">
    <com.example.ckz.demo1.view.ClearEditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditText"
        android:textCursorDrawable="@color/grayColor"
        android:drawablePadding="20dp"
        android:maxLines="1"
        android:lines="1"
        android:inputType="phone"
        android:hint="@string/input_phone"
        android:drawableLeft="@mipmap/phone_num"/>
    <com.example.ckz.demo1.view.ClearEditText
        android:id="@+id/password"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditText"
        android:textCursorDrawable="@color/grayColor"
        android:drawableLeft="@mipmap/password"
        android:maxLines="1"
        android:lines="1"
        android:hint="@string/input_password"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:digits="@string/filter_vcode"/>
    <Button
        android:id="@+id/next_step"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_bg_select"
        android:textColor="@color/whilte"
        android:text="@string/next"
        android:textSize="@dimen/titleSize"/>
</LinearLayout>
</LinearLayout>
