<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cookbook_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ckz.demo1.activity.cookbook.CookbookMainActivity">

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/spaceColor" />
        <LinearLayout
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_btn"
                style="@style/cookbook_main_bottom_style"
                android:text="@string/main_page"
                />
            <TextView
                android:id="@+id/type_btn"
                style="@style/cookbook_main_bottom_style"
                android:text="@string/type"/>
            <TextView
                android:id="@+id/like_btn"
                android:text="@string/collect_pagr"
               style="@style/cookbook_main_bottom_style"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/mine_btn"
                android:text="@string/mine_page"
                style="@style/cookbook_main_bottom_style"/>
        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/content_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"></FrameLayout>

</RelativeLayout>
