<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:overScrollMode="never"
            android:id="@+id/result_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0dp"
            android:divider="#00000000"></ListView>
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:indeterminateTint="@color/grayColor"
        android:layout_centerInParent="true"
        tools:ignore="UnusedAttribute" />
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/no_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/textSize"
            android:text="@string/no_cook_data"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/net_erro_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/no_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data"/>
        <Button
            android:id="@+id/refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_data_text"
            android:layout_centerHorizontal="true"
            android:text="@string/refresh"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/most_btn_bg"
            android:textSize="@dimen/textSize"
            />
    </RelativeLayout>
</RelativeLayout>