<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_phone_check"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ckz.demo1.activity.user.PhoneCheckActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            style="@style/top_back_style"
            android:src="@drawable/tool_bar_back"
            android:id="@id/back_btn"/>
        <TextView
           style="@style/top_title_style"
            android:text="@string/phone_check"
            android:textColor="@color/whilte"/>
    </RelativeLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="50dp"
           android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:layout_marginRight="@dimen/activity_horizontal_margin"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <com.example.ckz.demo1.view.ClearEditText
                   android:id="@+id/input_code"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="3"
                   android:inputType="number"
                   android:hint="请输入验证码"/>
               <TextView
                   android:id="@+id/send_message"
                   android:layout_width="0dp"
                   android:maxLines="1"
                   android:layout_height="wrap_content"
                   android:text="@string/get_check_code"
                   android:layout_weight="1"/>
           </LinearLayout>
           <Button
               android:id="@+id/next_step"
               android:background="@drawable/login_btn_bg_select"
               android:layout_marginTop="@dimen/activity_vertical_margin"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/next"
               android:textColor="@color/whilte"
               android:textSize="@dimen/titleSize"/>
       </LinearLayout>
   </RelativeLayout>
</LinearLayout>
