<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ckz.demo1.activity.SettingActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@id/back_btn"
            style="@style/top_back_style"
            android:src="@drawable/tool_bar_back"/>
        <TextView
            style="@style/top_title_style"
            android:textColor="@color/whilte"
            android:text="@string/setting"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/horizontal_line"
        android:showDividers="middle">
        <!--版本号-->
        <LinearLayout
            android:id="@+id/version_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:descendantFocusability="blocksDescendants"
            android:background="@drawable/click_bg"
            android:gravity="center_vertical"
            android:minHeight="55sp">
            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/textSize"
                android:text="@string/version_code"/>
            <TextView
                android:id="@+id/version"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayColor"
                tools:text="v3.1.0"/>
        </LinearLayout>
        <!--清除缓存-->
        <LinearLayout
            android:id="@+id/cache_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:descendantFocusability="blocksDescendants"
            android:background="@drawable/click_bg"
            android:gravity="center_vertical"
            android:minHeight="55sp">
            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/textSize"
                android:text="@string/clear_cache"/>
            <TextView
                android:id="@+id/cache_size"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayColor"
                tools:text="3.2M"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
